log
Sat 30 Mar 2024 05:04:30 PM UTC: 
 tests:  0|6
total_score: 0/70
a57f58a
Sat 30 Mar 2024 05:06:47 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:10: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   36 |   return list;
      |          ^~~~
      |          List
list.c:36:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
de33ec4
Sat 30 Mar 2024 05:06:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
14c0f93
Sat 30 Mar 2024 05:08:19 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e1f3fdb
